Give up on modularisation for the time being, add dockerfile

--- a/persistence/src/main/resources/static/index.html
+++ b/persistence/src/main/resources/static/index.html
@@ -147,7 +147,7 @@
 
         // html title attribute
         node.append("title")
-            .text(function (d) { return d.title; })
+            .text(function (d) { return d.title; });
 
         // force feed algo ticks
         force.on("tick", function() {
